feat(conf-menu): Add possibility to select default alarm and default preparation time #45
